--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^6.0.78",
     "os-hostname": "^1.1.3",
-    "serialport": "^4.0.7"
+    "serialport": "^4.0.7",
+    "songle-widget": "latest"
   }
 }
