--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "@types/node": "^6.0.78",
     "os-hostname": "^1.1.3",
     "serialport": "^4.0.7",
-    "songle-widget": "latest"
+    "songle-api": "latest"
   }
 }
